			   XPCE ChangeLog
			   ==============

* ADDED: Support for writing PostScript color images.

* ADDED: Windows version: load .ICO data from streams and therefore from
  SWI-Prolog resources.  With help from	Fabien Todescato.  Thanks.

* FIXED: Handling `default' argument in @finder<-get_file.
  (Lourens van der Meij).


VERSION 6.1.5, distributed with SWI-Prolog 5.1.5
================================================

* FIXED: `@pce->show-console' to deal with new SWI-Prolog console code.

* PORT: Upgraded XPCE configure suite to use autoconf 2.5.3 (distributed
  with SuSE 8.1).  Configure gives some warnings on cd to non-existent
  directories, but appears to work fine.

* FIXED: `date->set' (also `date->initialise' if arguments are provided)
  on Windows platforms. Fabien Todescato.

* FIXED: Added type-checking if an instance-variable is initialised to
  a constant (Lourens van der Meij).


VERSION 6.1.4, distributed with SWI-Prolog 5.1.4
================================================


VERSION 6.1.3, distributed with SWI-Prolog 5.1.3
================================================

* FIXED: `file<-read_line' to fail on end-of-file as advertised (but
  no longer working after a recent patch to this code to deal with
  unlimited-length lines).

* FIXED: A few problems in the configuration-editor.

* ADDED: @prolog_ide->thread_monitor to monitor active threads.

* ADDED: `timer->service' to execute timers in `service mode'.

* FIXED: MT: not releasing XPCE mutex in event_window() if the window
  was destroyed while processing the event (leads to lockup after using
  a popup).

* ADDED: `path->relative_move' for better performance and flexibility.

* ADDED: optional argument to `device->clear' to force destruction of the
  erased objects.


VERSION 6.1.2, distributed with SWI-Prolog 5.1.2
================================================

* PORT: MS-Windows Moved from winsock-1 to winsock-2

* FIXED: memory leak due to error in recent change in incremental GC.